--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,12 @@
     <string name="signin_text">Sign in</string>
     <string name="complete">Complete</string>
     <string name="error">Error</string>
-    <string name="no_account_text">Don't have an account yet?</string>
+    <string name="no_account_text">Don\'t have an account yet?</string>
     <string name="signup_text">Sign up</string>
+    <string name="create_acc_text">Create new\naccount</string>
+    <string name="first_name_text">First name</string>
+    <string name="last_name_text">Last name</string>
+    <string name="email_text">Email</string>
+    <string name="password_repeat_text">Repeat password</string>
+    <string name="have_account_text">Already have an account?</string>
 </resources>
